objects/Billing_Profile_Summary__x.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_POID__c</fullName>
        <description>ACCOUNT_POID</description>
        <externalDeveloperName>ACCOUNT_POID</externalDeveloperName>
        <label>ACCOUNT_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BALANCE_AMOUNT__c</fullName>
        <description>BALANCE_AMOUNT</description>
        <externalDeveloperName>BALANCE_AMOUNT</externalDeveloperName>
        <label>BALANCE_AMOUNT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDOM__c</fullName>
        <description>BDOM</description>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLINFO_POID__c</fullName>
        <description>BILLINFO_POID</description>
        <externalDeveloperName>BILLINFO_POID</externalDeveloperName>
        <label>BILLINFO_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLING_PROFILE_ID__c</fullName>
        <description>BILLING_PROFILE_ID</description>
        <externalDeveloperName>BILLING_PROFILE_ID</externalDeveloperName>
        <label>BILLING_PROFILE_ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CONTACT_NAME__c</fullName>
        <description>BP_CONTACT_NAME</description>
        <externalDeveloperName>BP_CONTACT_NAME</externalDeveloperName>
        <label>BP_CONTACT_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_ACCOUNT_NUMBER__c</fullName>
        <description>CC_ACCOUNT_NUMBER</description>
        <externalDeveloperName>CC_ACCOUNT_NUMBER</externalDeveloperName>
        <label>CC_ACCOUNT_NUMBER</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXP_YEAR__c</fullName>
        <description>CC_EXP_YEAR</description>
        <externalDeveloperName>CC_EXP_YEAR</externalDeveloperName>
        <label>CC_EXP_YEAR</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ACCOUNT_NO__c</fullName>
        <description>CUSTOMER_ACCOUNT_NO</description>
        <externalDeveloperName>CUSTOMER_ACCOUNT_NO</externalDeveloperName>
        <label>CUSTOMER_ACCOUNT_NO</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPUTED_AMOUNT__c</fullName>
        <description>DISPUTED_AMOUNT</description>
        <externalDeveloperName>DISPUTED_AMOUNT</externalDeveloperName>
        <label>DISPUTED_AMOUNT</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUE_AMOUNT__c</fullName>
        <description>DUE_AMOUNT</description>
        <externalDeveloperName>DUE_AMOUNT</externalDeveloperName>
        <label>DUE_AMOUNT</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_BILL_DATE__c</fullName>
        <description>NEXT_BILL_DATE</description>
        <externalDeveloperName>NEXT_BILL_DATE</externalDeveloperName>
        <label>NEXT_BILL_DATE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD__c</fullName>
        <description>PAYMENT_METHOD</description>
        <externalDeveloperName>PAYMENT_METHOD</externalDeveloperName>
        <label>PAYMENT_METHOD</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PENDING_PAY_ADJ_AMOUNT__c</fullName>
        <description>PENDING_PAY_ADJ_AMOUNT</description>
        <externalDeveloperName>PENDING_PAY_ADJ_AMOUNT</externalDeveloperName>
        <label>PENDING_PAY_ADJ_AMOUNT</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_AMOUNT__c</fullName>
        <description>TOTAL_AMOUNT</description>
        <externalDeveloperName>TOTAL_AMOUNT</externalDeveloperName>
        <label>TOTAL_AMOUNT</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNBILLED_USAGE_AMOUNT__c</fullName>
        <description>UNBILLED_USAGE_AMOUNT</description>
        <externalDeveloperName>UNBILLED_USAGE_AMOUNT</externalDeveloperName>
        <label>UNBILLED_USAGE_AMOUNT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>